2007-11-29  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Unify parsing of Section and Priority
	fields with Homepage.
	(%spvalue, %spdefault): Remove unued variables.
	(spfileslistvalue): Use %f instead of %spvalue.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Add prototype. Move
	to the top of the file with the other functions.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* src/main.c (log_file): Move definition to ...
	* lib/dpkg-db.h: ... here.
	* src/configure.c (status_pipes): Remove extern definition.
	* src/errors.c (status_pipes): Likewise.
	* lib/tarfn.c (TarExtractor): Do not declare as extern.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (arbitrary_fields): Define as static.
	* lib/dbmodify.c (fnis): Likewise.
	* lib/fields.c (conffvalue_lastword): Likewise.
	* lib/tarfn.c (StoC): Likewise.
	* src/packages.c (breaks_check_target): Likewise.
	* utils/start-stop-daemon.c (siglist): Likewise.

2007-11-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-gensymbols.pl: The environment variable
	DPKG_GENSYMBOLS_CHECK_LEVEL can override the level of checks made
	by dpkg-gensymbols. This offers the possibility to unofficial
	ports to ignore errors due to symbols files that do not correspond.

2007-11-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Harmonize a failure message.
	* man/dpkg-shlibdeps.1: Provide explanations concerning the two
	failures that dpkg-shlibdeps might generate. This is needed so
	that maintainers have an idea of what to do to fix the problems.

2007-11-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Do not fail if it
	can't find unversioned libraries, just output a warning.
	Consequently skip the check on symbols when some libs were not
	found because one can not be sure that the symbols was not
	provided by the missing library.
