@@ -18,6 +18,7 @@ dpkg (1.14.12) UNRELEASED; urgency=low
   * Define several private functions and variables as static.
   * Move extern declarations to header files and stop defining them as extern.
   * Unify parsing of Section and Priority in dpkg-gencontrol with Homepage.
+  * Change dpkg-scanpackages to use the Dpkg::ErrorHandling module.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 24 Nov 2007 07:38:13 +0200
 
