@@ -1,5 +1,11 @@
 2007-11-29  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-scanpackages.pl: Use Dpkg::ErrorHandling. Use error
+	syserr and subprocerr instead of die and sprintf.
+	(load_override): Likewise.
+
+2007-11-29  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gencontrol.pl: Unify parsing of Section and Priority
 	fields with Homepage.
 	(%spvalue, %spdefault): Remove unued variables.
